# sqlblindextract

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  blindextract.py  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
src/sqlblindextract/: __init__.py  __main__.py  cli.py  core.py
tests/: conftest.py  test_cli.py  test_core.py
